2006-01-13  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #326378
	
	* mail-composer.error.xml: Added mnemonics to Recover, Do not Recover
	buttons in composer.

2005-12-21 Rohini S <srohini@novell.com>

	** See bug #246237

	* e-msg-composer.c 
	(create_composer):
	(subject_changed_cb):
	Modified to change window title to "Compose Message"

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* e-msg-composer-hdrs.h: use libedataserver/e-account.h 
	instead of e-util/e-account.h.
	* evolution-composer.c: use libedataserver/e-account-list.h 
	instead of e-util/e-account-list.h.

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* e-msg-composer.c
	* e-msg-composer-attachment.c: Include <gtk/gtk.h> instead of
	attempting to hand-pick individual GTK headers. Use gstdio
	wrappers. Use GDir instead of dirent. Use g_mkstemp() instead of
	mkstemp(). Construct xml file names at run-time.

	* e-msg-composer.c (autosave_manager_unregister): Close file
	before unlinking so we don't leave stray autosave files laying
	around on Win32.

2005-11-23  Johnny Jacob <johnnyjacob@gmail.com>
	
	** See Bug # 246245
	* e-msg-composer-select-file.c (e_msg_composer_select_file_attachments):   
	Changed the title caption from "Attach file(s)" to "Insert Attachment".

2005-12-07  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* e-msg-composer.[ch]:
	(build_message):
	(menu_insert_priority_cb):
	(setup_ui):
	(e_msg_composer_get_priority):
	(e_msg_composer_set_priority):
	Add support for setting priority of a message.

2005-12-05  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	** See bug #322863
	* e-msg-composer.c: (e_msg_composer_new_with_message):
	Check if the account indeed exists before freeing/duping it.
	The account would typically not exist, when redirecting mails
	originated from other accounts which are not configured in ones 
	machine.

2005-11-26  Tor Lillqvist  <tml@novell.com>

	* e-msg-composer-attachment.c: Include e-util-private.h to get